--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
           <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
+        <div>
+            <p>This is my 1st paragraph</p>
+        </div>
 </body>
 </html>
