--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
           <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
+      <div>
+        <p>this is my paragraph</p>
+      </div>
 </body>
 </html>
